--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header class="header">
+        <h1>News Webpage</h1>
+    </header>
+    <div class="latest-news-section">
+        <h2>Latest News</h2>
+        <ul>
+            <li><h3>News Item One</h3><p>Details about news item one.</p></li>
+            <li><h3>News Item Two</h3><p>Details about news item two.</p></li>
+            <li><h3>News Item Three</h3><p>Details about news item three.</p></li>
+        </ul>
+    </div>
+    <div class="pictorial-news-section">
+        <h2>Pictorial News</h2>
+        <img src="image_one.jpg" alt="Image One">
+        <img src="image_two.jpg" alt="Image Two">
+        <img src="image_three.jpg" alt="Image Three">
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
